--- a/pages/subjects/alevel-biology.html
+++ b/pages/subjects/alevel-biology.html
@@ -1756,10 +1756,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                              <img src="../../assets/logos/kaishu.jpg" alt="Kaishu profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <blockquote class="corp-quote">“What really helped me was how we went beyond just memorising the spec. We spent time building the background understanding, so when topics like protein synthesis or gene regulation came up, I actually knew why things worked the way they did. It made the harder A level questions feel so much more manageable.”</blockquote>
+                          <div class="corp-meta">Kaishu S • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
