--- a/pages/subjects/gcse-biology.html
+++ b/pages/subjects/gcse-biology.html
@@ -1730,7 +1730,7 @@
                           <div class="corp-logo" aria-hidden="true">
                               <img src="../../assets/logos/kaishu.jpg" alt="Kaishu profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“What really helped me was how we went beyond just memorising the spec. We spent time building the background understanding, so when topics like protein synthesis or gene regulation came up, I actually knew why things worked the way they did. It made the harder A level questions feel so much more manageable.”</blockquote>
+                          <blockquote class="corp-quote">“The way GCSE Biology was taught step by step made it so much clearer. I felt so much more confident with the exam questions and improved a lot.”</blockquote>
                           <div class="corp-meta">Kaishu S • Student</div>
                         </div>
                       </div>
