--- a/pages/subjects/gcse-biology.html
+++ b/pages/subjects/gcse-biology.html
@@ -1728,19 +1728,20 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
+                              <img src="../../assets/logos/george.jpg" alt="George profile" loading="lazy" />
+                          </div>
+                          <blockquote class="corp-quote">“The hardest part of A-level Biology for me was keeping up with the amount of detail, but learning how to pick out what really mattered helped a lot. It made the exams feel much less stressful.”</blockquote>
+                          <div class="corp-meta">George B • Student</div>
+                        </div>
+                      </div>
+                     <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <div class="corp-testimonial">
+                          <div class="corp-logo" aria-hidden="true">
                               <img src="../../assets/logos/kaishu.jpg" alt="Kaishu profile" loading="lazy" />
                           </div>
                           <blockquote class="corp-quote">“The way GCSE Biology was taught step by step made it so much clearer. I felt so much more confident with the exam questions and improved a lot.”</blockquote>
                           <div class="corp-meta">Kaishu S • Student</div>
-                        </div>
-                      </div>
-                      <div class="swiper-slide">
-                        <div class="corp-testimonial">
-                          <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
-                          </div>
-                          <blockquote class="corp-quote">“Professional, calm, and effective. The diagnostic lesson gave us a clear roadmap — we finally knew what to focus on.”</blockquote>
-                          <div class="corp-meta">Robin • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
