--- a/pages/subjects/alevel-biology.html
+++ b/pages/subjects/alevel-biology.html
@@ -1756,19 +1756,20 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
+                              <img src="../../assets/logos/george.jpg" alt="George profile" loading="lazy" />
+                          </div>
+                          <blockquote class="corp-quote">“The hardest part of A-level Biology for me was keeping up with the amount of detail, but learning how to pick out what really mattered helped a lot. It made the exams feel much less stressful.”</blockquote>
+                          <div class="corp-meta">George B • Student</div>
+                        </div>
+                      </div>
+                      <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <div class="corp-testimonial">
+                          <div class="corp-logo" aria-hidden="true">
                               <img src="../../assets/logos/kaishu.jpg" alt="Kaishu profile" loading="lazy" />
                           </div>
                           <blockquote class="corp-quote">“What really helped me was how we went beyond just memorising the spec. We spent time building the background understanding, so when topics like protein synthesis or gene regulation came up, I actually knew why things worked the way they did. It made the harder A level questions feel so much more manageable.”</blockquote>
                           <div class="corp-meta">Kaishu S • Student</div>
-                        </div>
-                      </div>
-                      <div class="swiper-slide">
-                        <div class="corp-testimonial">
-                          <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
-                          </div>
-                          <blockquote class="corp-quote">“Professional, calm, and effective. The diagnostic lesson gave us a clear roadmap — we finally knew what to focus on.”</blockquote>
-                          <div class="corp-meta">Robin • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
